--- a/common-api/pom.xml
+++ b/common-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>youtrack-worklog-viewer</artifactId>
         <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
-        <version>2.7.4</version>
+        <version>2.7.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,8 +19,8 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
         </dependency>
 
     </dependencies>
