--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>de.pbauerochse.youtrack-worklog-viewer</groupId>
     <artifactId>youtrack-worklog-viewer</artifactId>
     <packaging>pom</packaging>
-    <version>2.7.4</version>
+    <version>2.7.5</version>
 
     <name>YouTrack Worklog Viewer - Root</name>
 
@@ -53,33 +53,34 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <kotlin-compiler-java-target.version>11</kotlin-compiler-java-target.version>
-        <kotlin.version>1.7.22</kotlin.version>
-        <openjfx.version>19</openjfx.version>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <kotlin-compiler-java-target.version>17</kotlin-compiler-java-target.version>
+        <kotlin.version>1.9.24</kotlin.version>
+        <openjfx.version>22.0.1</openjfx.version>
 
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-        <maven-shade-plugin.version>3.4.1</maven-shade-plugin.version>
-        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
-        <maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
-        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-shade-plugin.version>3.5.3</maven-shade-plugin.version>
+        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
+        <maven-deploy-plugin.version>3.1.2</maven-deploy-plugin.version>
+        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+        <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
 
-        <httpclient.version>4.5.13</httpclient.version>
-        <jackson.version>2.14.1</jackson.version>
-        <commons-text.version>1.10.0</commons-text.version>
+        <httpclient.version>5.3.1</httpclient.version>
+        <jackson.version>2.17.1</jackson.version>
+        <commons-text.version>1.12.0</commons-text.version>
 
-        <slf4j-api.version>2.0.5</slf4j-api.version>
-        <logback.version>1.4.5</logback.version>
+        <slf4j-api.version>2.0.13</slf4j-api.version>
+        <logback.version>1.5.6</logback.version>
 
-        <junit.jupiter.version>5.9.0</junit.jupiter.version>
-        <mockito-junit-jupiter.version>4.9.0</mockito-junit-jupiter.version>
-        <byte-buddy.version>1.12.19</byte-buddy.version>
-        <hamcrest.version>1.3</hamcrest.version>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
-        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
+        <junit.jupiter.version>5.10.2</junit.jupiter.version>
+        <mockito-junit-jupiter.version>5.12.0</mockito-junit-jupiter.version>
+        <byte-buddy.version>1.14.15</byte-buddy.version>
+        <hamcrest.version>2.2</hamcrest.version>
+<!--        <jaxb-api.version>2.3.1</jaxb-api.version>-->
+
         <fastexcel.version>0.18.0</fastexcel.version>
     </properties>
 
@@ -244,8 +245,8 @@
             </dependency>
 
             <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
                 <version>${httpclient.version}</version>
             </dependency>
 
@@ -286,12 +287,12 @@
             </dependency>
 
             <!-- needed by jackson -->
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${jaxb-api.version}</version>
-                <scope>runtime</scope>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>javax.xml.bind</groupId>-->
+<!--                <artifactId>jaxb-api</artifactId>-->
+<!--                <version>${jaxb-api.version}</version>-->
+<!--                <scope>runtime</scope>-->
+<!--            </dependency>-->
 
             <dependency>
                 <groupId>org.dhatim</groupId>
@@ -394,7 +395,7 @@
 
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+            <artifactId>hamcrest</artifactId>
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
